@@ -1,3 +1,5 @@
+17-Sep-2013 Added Opus.Core.Array.AddUnique method.
+
 29-Aug-2013 Adding Opus.Core.Location which is an abstraction for a location on disk. Opus.Core.BaseModule has a dictionary of Locations, and a primary PackageLocation. This simplifies the Include and Exclude functionality to locate files.
 
 28-Aug-2013 Adding LLVMGcc-4.2 package for OSX.
